--- a/444tenFB/TST/UI/TENSizeClassTest/TENSizeClassTestViewController.xib
+++ b/444tenFB/TST/UI/TENSizeClassTest/TENSizeClassTestViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7706"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TENSizeClassTestViewController">
@@ -14,32 +14,38 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" id="Kir-eR-QoX">
-                    <rect key="frame" x="20" y="20" width="130" height="254"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="0.69000000000000006" colorSpace="calibratedRGB"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IV6-tL-XD5">
+                    <rect key="frame" x="350" y="20" width="230" height="254"/>
+                    <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="0.67000000000000004" colorSpace="calibratedRGB"/>
                 </view>
-                <view contentMode="scaleToFill" id="hEh-a7-wbl">
-                    <rect key="frame" x="20" y="294" width="280" height="254"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hEh-a7-wbl">
+                    <rect key="frame" x="20" y="294" width="560" height="254"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="0.72999999999999998" colorSpace="calibratedRGB"/>
                 </view>
-                <view contentMode="scaleToFill" id="IV6-tL-XD5">
-                    <rect key="frame" x="170" y="20" width="130" height="254"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="0.67000000000000004" colorSpace="calibratedRGB"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kir-eR-QoX">
+                    <rect key="frame" x="20" y="20" width="230" height="254"/>
+                    <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="0.69000000000000006" colorSpace="calibratedRGB"/>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="Kir-eR-QoX" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="5gh-1T-bhI"/>
+                <constraint firstAttribute="trailing" secondItem="hEh-a7-wbl" secondAttribute="trailing" constant="20" id="HOh-ED-2dF"/>
+                <constraint firstAttribute="bottom" secondItem="hEh-a7-wbl" secondAttribute="bottom" constant="52" id="N20-hl-tWJ"/>
+                <constraint firstItem="hEh-a7-wbl" firstAttribute="top" secondItem="Kir-eR-QoX" secondAttribute="bottom" constant="20" id="NZV-cE-Vtl"/>
+                <constraint firstItem="Kir-eR-QoX" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="R5a-yd-gFb"/>
+                <constraint firstItem="IV6-tL-XD5" firstAttribute="width" secondItem="Kir-eR-QoX" secondAttribute="width" id="RVZ-hh-sUm"/>
+                <constraint firstItem="hEh-a7-wbl" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="SK1-j9-ctH"/>
+                <constraint firstItem="IV6-tL-XD5" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="Xc1-Uf-7Qg"/>
+                <constraint firstItem="IV6-tL-XD5" firstAttribute="height" secondItem="Kir-eR-QoX" secondAttribute="height" id="lMc-cs-oMb"/>
+                <constraint firstItem="IV6-tL-XD5" firstAttribute="leading" secondItem="Kir-eR-QoX" secondAttribute="trailing" constant="100" id="ol6-HA-aDS"/>
+                <constraint firstItem="IV6-tL-XD5" firstAttribute="height" secondItem="hEh-a7-wbl" secondAttribute="height" id="pmF-uu-Tfs"/>
+                <constraint firstAttribute="trailing" secondItem="IV6-tL-XD5" secondAttribute="trailing" constant="20" id="v3g-BA-fCF"/>
+            </constraints>
             <point key="canvasLocation" x="354" y="455"/>
         </view>
     </objects>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
 </document>
